--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/react": "^6.0.0",
     "firebase": "^11.7.3",
     "lottie-react": "^2.4.1",
     "react": "^19.1.0",
