--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@iconify/react": "^6.0.0",
+    "axios": "^1.10.0",
     "firebase": "^11.7.3",
     "lottie-react": "^2.4.1",
     "react": "^19.1.0",
